agregado un navbar

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Ramesptop web</title>
 	<link type="text/css" rel="stylesheet" href="css/estilos.css">
+	<link type="text/css" rel="stylesheet" href="css/bootstrap.min.css">
 </head>
 <body>
 <section class="body">
@@ -13,12 +14,22 @@
 	-->
 	<header class="header">
 		<div class="row">
-			<div class="bg-success col-12 col-sm-3">
-				<h1 class="p-3">HHHHHHH</h1>
-			</div>
-			<div class="bg-primary col-12 col-sm-9">
-				<h2 class="p-3">HHHHHHH</h2>
-			</div>
+			<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  				<div class="container-fluid">
+    				<a class="navbar-brand" href="#">Navbar</a>
+    					<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+      						<span class="navbar-toggler-icon"></span>
+    					</button>
+    				<div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+      					<div class="navbar-nav">
+        					<a class="nav-link active" aria-current="page" href="#">Home</a>
+        					<a class="nav-link" href="#">Features</a>	
+	    	    			<a class="nav-link" href="#">Pricing</a>
+    	    				<a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+ 		     			</div>
+   		 			</div>
+ 		 		</div>
+			</nav>
 		</div>
 	</header>
 	<!--
@@ -53,6 +64,8 @@
 	</footer>
 
 </section>
-	
+	<script src="js/jquery-3.5.1.min.js"></script>
+	<script src="js/popper.min.js"></script>
+	<script src="js/bootstrap.min.js"></script>
 </body>
 </html>
