--- a/index.html
+++ b/index.html
@@ -13,19 +13,24 @@
 		Comienzo del header
 	-->
 	<header class="header">
-		<div class="row">
+		<div class="row fixed">
 			<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  				<div class="container-fluid">
-    				<a class="navbar-brand" href="#">Navbar</a>
-    					<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-      						<span class="navbar-toggler-icon"></span>
-    					</button>
-    				<div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-      					<div class="navbar-nav">
-        					<a class="nav-link active" aria-current="page" href="#">Home</a>
+  				<div class="container-fluid d-flex justify-content-between">
+  					<a class="navbar-brand" href="#">
+      					<img class="logo img-fluid" src="img/Logo.png" alt="">
+    				</a> 
+     				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+      					<span class="navbar-toggler-icon"></span>
+    				</button>
+    				<div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
+      					<div class="navbar-nav float-right">
+        					<a class="nav-link active" aria-current="page" href="#">Inicio</a>
         					<a class="nav-link" href="#">Features</a>	
 	    	    			<a class="nav-link" href="#">Pricing</a>
     	    				<a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+    	    				<a class="nav-link active" aria-current="page" href="#">Contacto</a>
+    	    				<a class="nav-link active" aria-current="page" href="#">Portfolio</a>
+    	    				<a class="nav-link active" aria-current="page" href="#">Blog</a>
  		     			</div>
    		 			</div>
  		 		</div>
