--- a/index.html
+++ b/index.html
@@ -6,31 +6,29 @@
 	<title>Ramesptop web</title>
 	<link type="text/css" rel="stylesheet" href="css/estilos.css">
 	<link type="text/css" rel="stylesheet" href="css/bootstrap.min.css">
+		<script src="https://kit.fontawesome.com/31c64c925d.js" crossorigin="anonymous"></script>
 </head>
 <body>
 <section class="body">
 	<!--
 		Comienzo del header
 	-->
-	<header class="header">
-		<div class="row fixed">
-			<nav class="navbar navbar-expand-lg navbar-light bg-light">
+	<header id="header" class="header">
+		<div id="navbar" class="row">
+			<nav class="navbar navbar-expand-lg navbar-light">
   				<div class="container-fluid d-flex justify-content-between">
   					<a class="navbar-brand" href="#">
-      					<img class="logo img-fluid" src="img/Logo.png" alt="">
+      					<img id="logo" loading="lazy" class="logo img-fluid" src="img/Logo.png" alt="">
     				</a> 
-     				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+     					<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
       					<span class="navbar-toggler-icon"></span>
-    				</button>
+    					</button>
     				<div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
-      					<div class="navbar-nav float-right">
-        					<a class="nav-link active" aria-current="page" href="#">Inicio</a>
-        					<a class="nav-link" href="#">Features</a>	
-	    	    			<a class="nav-link" href="#">Pricing</a>
-    	    				<a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-    	    				<a class="nav-link active" aria-current="page" href="#">Contacto</a>
-    	    				<a class="nav-link active" aria-current="page" href="#">Portfolio</a>
-    	    				<a class="nav-link active" aria-current="page" href="#">Blog</a>
+      					<div class="navbar-nav d-flex justify-content-between">
+        					<a class=" nav-link text-white font-weight-bold active text-center" aria-current="page" href="#"><span class="p-2 h5">Inicio</span> </a>
+    	    				<a class=" nav-link text-white font-weight-bold text-center" aria-current="page" href="#"><span class="p-2 h5">Contacto</span></a>
+    	    				<a class=" nav-link text-white font-weight-bold text-center" aria-current="page" href="#"><span class="p-2 h5">Portfolio</span></a>
+    	    				<a class=" nav-link text-white font-weight-bold text-center" aria-current="page" href="#"><span class="p-2 h5">Blog</span></a>
  		     			</div>
    		 			</div>
  		 		</div>
@@ -40,8 +38,70 @@
 	<!--
 		Comienzo de seccion 1
 	-->
-	<section class="seccion1">
-		
+	<section class="seccion1 pt-3">
+		<div class="row ">
+			<div class="col-12 mt-5 pt-5">	
+				<p class="h2 text-center text-white font-weight-bold">DISEÑO DE SITIOS WEB PARA HACER CRECER TU NEGOCIO <br/> Y DAR IMAGEN A TU MARCA</p>
+			</div>
+			<div class="col-12 p-5">
+				<h5 class="p-5 h5 text-center text-white font-weight-bold">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veritatis alias soluta quos exercitationem iure provident natus numquam perspiciatis minima maiores dolor ratione, cumque possimus assumenda quod explicabo rem tempora dolores.</h4>
+			</div>
+			<div class="col-12 d-flex justify-content-between">
+				<div class="p-5 d-none d-sm-flex col-sm-2"></div>
+				<div class="m-2 bg-success col-12 col-sm-1">
+					<div class="d-flex flex-column">
+						<div class="p-5 rounded bg-light">
+							<p></p>
+						</div>
+						<div class="rounded ">
+							<p>Diseño Web <br/> Responsive</p>
+						</div>
+					</div>
+				</div>
+				<div class="m-2 bg-success col-12 col-sm-1">
+					<div class="d-flex flex-column">
+						<div class="p-5 rounded bg-light">
+							<p></p>
+						</div>
+						<div class="">
+							<p>Interfaces de Usuario <br/> Experiencias de Usuario(UI/UX)</p>
+						</div>
+					</div>
+				</div>
+				<div class="m-2 bg-success col-12 col-sm-1">
+					<div class="d-flex flex-column">
+						<div class="p-5 rounded bg-light">
+							<p></p>
+						</div>
+						<div class="">
+							<p></p>
+						</div>
+					</div>
+				</div>
+				<div class="m-2 bg-success col-12 col-sm-1">
+					<div class="d-flex flex-column">
+						<div class="p-5 rounded bg-light">
+							<p></p>
+						</div>
+						<div class="">
+							<p></p>
+						</div>
+					</div>
+				</div>
+				<div class="m-2 bg-success col-12 col-sm-1">
+					<div class="d-flex flex-column">
+						<div class="p-5 rounded bg-light">
+							<p></p>
+						</div>
+						<div class="">
+							<p></p>
+						</div>
+					</div>
+				</div>
+				<div class="p-5 d-none d-sm-flex col-sm-2"></div>
+			</div>
+
+		</div>
 	</section>
 	<!--
 		Comienzo de seccion 2
@@ -69,8 +129,13 @@
 	</footer>
 
 </section>
+
 	<script src="js/jquery-3.5.1.min.js"></script>
-	<script src="js/popper.min.js"></script>
+	<script src="https://unpkg.com/@popperjs/core@2/dist/umd/popper.js"></script>
+
 	<script src="js/bootstrap.min.js"></script>
+		<script src="js/efectos.js"></script>
+		<script src="js/headroom.min.js"></script>
+
 </body>
 </html>
