seccion 1 primera parte completada

--- a/index.html
+++ b/index.html
@@ -44,57 +44,57 @@
 				<p class="h2 text-center text-white font-weight-bold">DISEÑO DE SITIOS WEB PARA HACER CRECER TU NEGOCIO <br/> Y DAR IMAGEN A TU MARCA</p>
 			</div>
 			<div class="col-12 p-5">
-				<h5 class="p-5 h5 text-center text-white font-weight-bold">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veritatis alias soluta quos exercitationem iure provident natus numquam perspiciatis minima maiores dolor ratione, cumque possimus assumenda quod explicabo rem tempora dolores.</h4>
+				<h5 class="p-5 h5 text-center text-white font-weight-bold">En nuestra mente existe un mundo de posibilidades, solo debemos crear de adentro hacia afuera <br/> y asi materializar nuestros proyectos</h4>
 			</div>
 			<div class="col-12 d-flex justify-content-between">
 				<div class="p-5 d-none d-sm-flex col-sm-2"></div>
-				<div class="m-2 bg-success col-12 col-sm-1">
+				<div class="m-2 col-12 col-sm-1">
 					<div class="d-flex flex-column">
-						<div class="p-5 rounded bg-light">
-							<p></p>
+						<div class="d-flex justify-content-center pb-3">
+							<i class="m-auto p-1 text-center h1 text-white far fa-window-restore"></i>
 						</div>
 						<div class="rounded ">
-							<p>Diseño Web <br/> Responsive</p>
+							<p class="text-center h5 font-weight-bold text-white">Diseño Web <br/> Responsive</p>
 						</div>
 					</div>
 				</div>
-				<div class="m-2 bg-success col-12 col-sm-1">
+				<div class="m-2 col-12 col-sm-1">
 					<div class="d-flex flex-column">
-						<div class="p-5 rounded bg-light">
-							<p></p>
+						<div class="d-flex justify-content-center pb-3">
+							<i class="m-auto p-1 text-center h1 fas fa-users text-white"></i>
 						</div>
 						<div class="">
-							<p>Interfaces de Usuario <br/> Experiencias de Usuario(UI/UX)</p>
+							<p class="text-center h5 font-weight-bold text-white">Interfaces de Usuario <br/>(UI/UX)</p>
 						</div>
 					</div>
 				</div>
-				<div class="m-2 bg-success col-12 col-sm-1">
+				<div class="m-2 col-12 col-sm-1">
 					<div class="d-flex flex-column">
-						<div class="p-5 rounded bg-light">
-							<p></p>
+						<div class="d-flex justify-content-center pb-3">
+							<i class="m-auto p-1 text-center h1 text-white fas fa-paint-brush"></i>
 						</div>
 						<div class="">
-							<p></p>
+							<p class="text-center h5 font-weight-bold text-white">Diseño de logos</p>
 						</div>
 					</div>
 				</div>
-				<div class="m-2 bg-success col-12 col-sm-1">
+				<div class="m-2 col-12 col-sm-1">
 					<div class="d-flex flex-column">
-						<div class="p-5 rounded bg-light">
-							<p></p>
+						<div class="d-flex justify-content-center pb-3">
+							<i class="m-auto p-1 text-center h1 text-white fas fa-palette"></i>
 						</div>
 						<div class="">
-							<p></p>
+							<p class="text-center h5 font-weight-bold text-white">Diseño de banners</p>
 						</div>
 					</div>
 				</div>
-				<div class="m-2 bg-success col-12 col-sm-1">
+				<div class="m-2 col-12 col-sm-1">
 					<div class="d-flex flex-column">
-						<div class="p-5 rounded bg-light">
-							<p></p>
+						<div class="d-flex justify-content-center pb-3">
+							<i class="m-auto p-1 text-center h1 text-white fas fa-laptop-code"></i>
 						</div>
 						<div class="">
-							<p></p>
+							<p class="text-center h5 font-weight-bold text-white">Desarrollo Web</p>
 						</div>
 					</div>
 				</div>
