--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
 	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 	<title>Ramesptop web</title>
 	<link type="text/css" rel="stylesheet" href="css/estilos.css">
 	<link type="text/css" rel="stylesheet" href="css/bootstrap.min.css">
@@ -46,39 +46,39 @@
 			<div class="col-12 p-5">
 				<h5 class="p-5 h5 text-center text-white font-weight-bold">En nuestra mente existe un mundo de posibilidades, solo debemos crear de adentro hacia afuera <br/> y asi materializar nuestros proyectos</h4>
 			</div>
-			<div class="col-12 d-flex justify-content-between">
+			<div class="col-12 d-flex justify-content-between flex-wrap">
 				<div class="p-5 d-none d-sm-flex col-sm-2"></div>
-				<div class="m-2 col-12 col-sm-1">
+				<div class="m-2 col-5 col-sm-1">
 					<div class="d-flex flex-column">
 						<div class="d-flex justify-content-center pb-3">
 							<i class="m-auto p-1 text-center h1 text-white far fa-window-restore"></i>
 						</div>
 						<div class="rounded ">
-							<p class="text-center h5 font-weight-bold text-white">Diseño Web <br/> Responsive</p>
+							<p class="text-center h5 font-weight-bold text-white">Diseño Web</p>
 						</div>
 					</div>
 				</div>
-				<div class="m-2 col-12 col-sm-1">
+				<div class="m-2 col-5 col-sm-1">
 					<div class="d-flex flex-column">
 						<div class="d-flex justify-content-center pb-3">
 							<i class="m-auto p-1 text-center h1 fas fa-users text-white"></i>
 						</div>
 						<div class="">
-							<p class="text-center h5 font-weight-bold text-white">Interfaces de Usuario <br/>(UI/UX)</p>
+							<p class="text-center h5 font-weight-bold text-white">Interfaz de Usuario <br/>(UI/UX)</p>
 						</div>
 					</div>
 				</div>
-				<div class="m-2 col-12 col-sm-1">
+				<div class="m-2 col-5 col-sm-1">
 					<div class="d-flex flex-column">
 						<div class="d-flex justify-content-center pb-3">
-							<i class="m-auto p-1 text-center h1 text-white fas fa-paint-brush"></i>
+							<i class="m-auto p-1 text-center h1 text-white fas fa-star"></i>
 						</div>
 						<div class="">
 							<p class="text-center h5 font-weight-bold text-white">Diseño de logos</p>
 						</div>
 					</div>
 				</div>
-				<div class="m-2 col-12 col-sm-1">
+				<div class="m-2 col-5 col-sm-1">
 					<div class="d-flex flex-column">
 						<div class="d-flex justify-content-center pb-3">
 							<i class="m-auto p-1 text-center h1 text-white fas fa-palette"></i>
@@ -88,17 +88,22 @@
 						</div>
 					</div>
 				</div>
-				<div class="m-2 col-12 col-sm-1">
+				<div class="m-auto m-sm-2 col-5 col-sm-1">
 					<div class="d-flex flex-column">
 						<div class="d-flex justify-content-center pb-3">
 							<i class="m-auto p-1 text-center h1 text-white fas fa-laptop-code"></i>
 						</div>
 						<div class="">
-							<p class="text-center h5 font-weight-bold text-white">Desarrollo Web</p>
+							<p class="text-center h5 font-weight-bold text-white">Desarrollo Web <br/> Responsive</p>
 						</div>
 					</div>
 				</div>
 				<div class="p-5 d-none d-sm-flex col-sm-2"></div>
+			</div>
+			<div class="col-12 d-flex justify-content-center pt-5 mb-5">
+				<div class="borde">
+					<a href="#" class="h4 contactanos">Contactanos ya!</a>
+				</div>
 			</div>
 
 		</div>
@@ -106,8 +111,59 @@
 	<!--
 		Comienzo de seccion 2
 	-->
-	<section class="seccion2">
-		
+	<section class="seccion2 p-sm-4 p-2">
+	<div class="container">
+		<div class="row p-sm-5 p-2 d-flex justify-content-center ">
+			<div class="col-12 p-sm-5 p-2">
+				<p class="h3">Elegante & Economico</p>
+				<p class="h1">Servicio de diseño web</p>
+				<hr class="linea col-12 col-sm-6" />
+				<p class="text-justify col-12 col-sm-6">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quisquam illum vitae blanditiis ipsa molestias saepe aperiam, mollitia at cumque adipisci velit tempora necessitatibus harum tempore fuga aut nisi dignissimos iste.</p>
+			</div>
+		</div>
+		<div class="row d-flex flex-wrap flex-column flex-sm-row justify-content-center">
+			<div class="m-auto p-4 p-sm-none justify-content-center simbols col-12 col-sm-6 ml-5 d-flex flex-wrap">
+				<div class="bordes m-1">
+					<div class="p-1 d-flex flex-column rounded">
+						<i class="iconos m-auto p-1 text-center font-weight-bold-50 text-dark far fa-window-restore"></i>
+						<p class="subico mt-1 text-center h5 font-weight-bold text-dark">Diseño Web</p>
+					</div>
+				</div>
+				<div class="bordes m-1">
+					<div class="p-1 d-flex flex-column rounded">
+						<i class="iconos m-auto p-1 text-center font-weight-bold-50 text-dark fas fa-users"></i>
+						<p class="subico mt-1 text-center h5 font-weight-bold text-dark">Interfaz de Usuario (UI/UX)</p>
+					</div>
+				</div>
+				<div class="bordes m-1">
+					<div class="p-1 d-flex flex-column rounded">
+						<i class="iconos m-auto p-1 text-center font-weight-bold-50 text-dark fas fa-star"></i>
+						<p class="subico mt-1 text-center h5 font-weight-bold text-dark">Diseño de logos</p>
+					</div>
+				</div>
+				<div class="bordes m-1">
+					<div class="p-1 d-flex flex-column rounded">
+						<i class="iconos m-auto p-1 text-center font-weight-bold-50 text-dark fas fa-palette"></i>
+						<p class="subico mt-1 text-center h5 font-weight-bold text-dark">Diseño de banners</p>
+					</div>
+				</div>
+				<div class="bordes m-1">
+					<div class="p-1 d-flex flex-column rounded">
+						<i class="iconos m-auto p-1 text-center font-weight-bold-50 text-dark fas fa-laptop-code"></i>
+						<p class="subico mt-1 text-center h5 font-weight-bold text-dark">Desarrollo Web <br/> Responsive</p>
+					</div>
+				</div>
+			</div>
+			<div class="mj col-12 col-sm-6">
+				<img class="laptop" src="img/mj.png" alt="">
+			</div>
+			<div class="mt-5 col-12 d-flex justify-content-center pt-5 mb-5">
+				<div class="borde">
+					<a href="#" class="h4 contactanos">Contactanos ya!</a>
+				</div>
+			</div>
+		</div>
+	</div>
 	</section>
 	<!--
 		Comienzo de seccion 3
