seccion 3 carrucel con imagenes de prueba

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 			<nav class="navbar navbar-expand-lg navbar-light">
   				<div class="container-fluid d-flex justify-content-between">
   					<a class="navbar-brand" href="#">
-      					<img id="logo" loading="lazy" class="logo img-fluid" src="img/Logo.png" alt="">
+      					
     				</a> 
      					<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
       					<span class="navbar-toggler-icon"></span>
@@ -168,8 +168,40 @@
 	<!--
 		Comienzo de seccion 3
 	-->
-	<section class="seccion3">
-		
+	<section class="seccion3 p-5">
+		<div class="col-12 p-5">
+			<p class="h1 text-white">Trabajos de Diseño <br/> Recientes</p>
+			<hr/>
+		</div>
+		<div class="col-12">
+			<div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+				  <div class="carousel-inner">
+				    <div class="carousel-item active ">
+				    	<div class="d-flex justify-content-center">
+				      <img src="img/image72.png" class="carrucelI1 d-block w-100" alt="">
+				      	</div>
+				    </div>
+				    <div class="carousel-item ">
+				    	<div class="d-flex justify-content-center">
+				      <img src="img/mj.png" class="carrucelI2 d-block w-100" alt="">
+				      	</div>
+				    </div>
+				    <div class="carousel-item ">
+				    	<div class="d-flex justify-content-center">
+				      <img src="img/LMS.png" class="carrucelI3 d-block w-100" alt="">
+				      	</div>
+				    </div>
+				  </div>
+				  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-bs-slide="prev">
+				    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+				    <span class="visually-hidden">Previous</span>
+				  </a>
+				  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-bs-slide="next">
+				    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+				    <span class="visually-hidden">Next</span>
+				  </a>
+				</div>
+		</div>	
 	</section>
 	<!--
 		Comienzo de seccion 4
