--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 		<div id="navbar" class="row">
 			<nav class="navbar navbar-expand-lg navbar-light">
   				<div class="container-fluid d-flex justify-content-between">
-  					<a class="navbar-brand" href="#">
-      					
+  					<a class="bord navbar-brand" href="#">		
+      					<p class="ram">Ramesptop <br/> <span class="web">Web</span><span class="des"> Design</span></p>
     				</a> 
      					<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
       					<span class="navbar-toggler-icon"></span>
@@ -28,7 +28,7 @@
         					<a class=" nav-link text-white font-weight-bold active text-center" aria-current="page" href="#"><span class="p-2 h5">Inicio</span> </a>
     	    				<a class=" nav-link text-white font-weight-bold text-center" aria-current="page" href="#"><span class="p-2 h5">Contacto</span></a>
     	    				<a class=" nav-link text-white font-weight-bold text-center" aria-current="page" href="#"><span class="p-2 h5">Portfolio</span></a>
-    	    				<a class=" nav-link text-white font-weight-bold text-center" aria-current="page" href="#"><span class="p-2 h5">Blog</span></a>
+    	    				<a class=" nav-link text-white font-weight-bold text-center" aria-current="page" href="https://blog.ramesptop.com"><span class="p-2 h5">Blog</span></a>
  		     			</div>
    		 			</div>
  		 		</div>
@@ -178,7 +178,7 @@
 				  <div class="carousel-inner">
 				    <div class="carousel-item active ">
 				    	<div class="d-flex justify-content-center">
-				      <img src="img/image72.png" class="carrucelI1 d-block w-100" alt="">
+				      <img src="img/LMS.png" class="carrucelI3 d-block w-100" alt="">
 				      	</div>
 				    </div>
 				    <div class="carousel-item ">
