--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
 			</div>
 			<div class="mt-5 col-12 d-flex justify-content-center pt-5 mb-5">
 				<div class="borde">
-					<a href="#" class="h4 contactanos">Contactanos ya!</a>
+					<a href="#" class="h4 contactanos">Dejanos ayudarte! cuentanos que tienes en mente?</a>
 				</div>
 			</div>
 		</div>
@@ -206,8 +206,29 @@
 	<!--
 		Comienzo de seccion 4
 	-->
-	<section class="seccion4">
-		
+	<section class="seccion4 p-5">
+		<div class="row p-5">
+			<div class="col-12 tituloC d-flex justify-content-center">
+				<div class="d-flex justify-content-between">
+					<p class="titulo text-light p-2">Informacion de contacto  </p><i class=" p-2 text-white iconoT fas fa-address-book"></i>
+				<hr/>
+				</div>
+			</div>
+			<div class="col-12 col-sm-4 contactoT d-flex justify-content-around rounded flex-column mt-5 p-2">
+				<div class="contactoC d-flex justify-content-start">
+					<p class="contacto text-dark p-2">Email: rene@ramesptop.com |<br/> ramesptop@protonmail.com</p><i class="p-2 text-dark contactoI fas fa-envelope"></i>
+				</div>
+				<div class="contactoC d-flex justify-content-start">
+					<p class="contacto text-dark p-2">Telefono: +51(941)339-689</p><i class="p-2 text-dark contactoI fas fa-phone-square"></i>
+				</div>
+				<div class="contactoC d-flex justify-content-start">
+					<p class="contacto text-dark p-2">Telegram: @RamEsptop</p><i class="p-2 text-dark contactoI fab fa-telegram"></i>
+				</div>
+				<div class="contactoC d-flex justify-content-start">
+					<p class="contacto text-dark p-2">Signal: +51(941)339-689</p><i class="p-2 text-dark contactoI far fa-comment"></i>
+				</div>				
+			</div>
+		</div>
 	</section>
 	<!--
 		Comienzo del footer
