--- a/index.html
+++ b/index.html
@@ -17,9 +17,10 @@
 		<div id="navbar" class="row">
 			<nav class="navbar navbar-expand-lg navbar-light">
   				<div class="container-fluid d-flex justify-content-between">
-  					<a class="bord navbar-brand" href="#">		
-      					<p class="ram">Ramesptop <br/> <span class="web">Web</span><span class="des"> Design</span></p>
-    				</a> 
+  					<a class="borde col-1 p-1 bg-white rounded" href="#">
+  						<img class="logo img-fluid" src="img/logo1.png" alt="">		
+      				<!--<p class="ram">Ramesptop <br/> <span class="web">Web</span><span class="des"> Design</span></p>-->
+    				</a>
      					<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
       					<span class="navbar-toggler-icon"></span>
     					</button>
