--- a/index.html
+++ b/index.html
@@ -208,27 +208,42 @@
 		Comienzo de seccion 4
 	-->
 	<section class="seccion4 p-5">
-		<div class="row p-5">
+		<div class="row mt-4 p-5 d-flex justify-content-between">
 			<div class="col-12 tituloC d-flex justify-content-center">
 				<div class="d-flex justify-content-between">
-					<p class="titulo text-light p-2">Informacion de contacto  </p><i class=" p-2 text-white iconoT fas fa-address-book"></i>
+					<p class="titulo text-light p-2">Informacion de contacto  </p><i class=" p-2 iconoT fas fa-address-book"></i>
 				<hr/>
 				</div>
 			</div>
-			<div class="col-12 col-sm-4 contactoT d-flex justify-content-around rounded flex-column mt-5 p-2">
+			<div class="col-12 col-sm-4 contactoT d-flex justify-content-start rounded flex-column mt-5 p-3">
 				<div class="contactoC d-flex justify-content-start">
-					<p class="contacto text-dark p-2">Email: rene@ramesptop.com |<br/> ramesptop@protonmail.com</p><i class="p-2 text-dark contactoI fas fa-envelope"></i>
+					<p class="contacto text-dark p-2">Email: rene@ramesptop.com |<br/> ramesptop@protonmail.com</p><i class="p-2 correo contactoI fas fa-envelope"></i>
 				</div>
 				<div class="contactoC d-flex justify-content-start">
-					<p class="contacto text-dark p-2">Telefono: +51(941)339-689</p><i class="p-2 text-dark contactoI fas fa-phone-square"></i>
+					<p class="contacto text-dark p-2">Telefono: +51(941)339-689</p><i class="p-2 telefono contactoI fas fa-phone-square"></i>
 				</div>
 				<div class="contactoC d-flex justify-content-start">
-					<p class="contacto text-dark p-2">Telegram: @RamEsptop</p><i class="p-2 text-dark contactoI fab fa-telegram"></i>
+					<p class="contacto text-dark p-2">Telegram: @RamEsptop</p><i class="p-2 telegram contactoI fab fa-telegram"></i>
 				</div>
 				<div class="contactoC d-flex justify-content-start">
-					<p class="contacto text-dark p-2">Signal: +51(941)339-689</p><i class="p-2 text-dark contactoI far fa-comment"></i>
+					<p class="contacto text-dark p-2">Signal: +51(941)339-689</p><i class="p-2 signal contactoI far fa-comment"></i>
 				</div>				
 			</div>
+			<div class="col-12 col-sm-3 contactoT contactoT2 rounded d-flex justify-content-start flex-wrap flex-column p-2 ">
+				<a class="" href="https://t.me/ramesptop" target="_BLANK">
+					<i class="logoT p-1 contactoI fab fa-telegram"></i>
+					<p cllass="clickT" >Click para iniciar conversación en telegram</p>	
+				</a>
+				<a class="" href="https://t.me/ramesptop" target="_BLANK">
+					<i class="logoT p-1 contactoI fab fa-telegram"></i>
+					<p cllass="clickT" >Click para iniciar conversación en telegram</p>	
+				</a>
+				<a class="" href="https://t.me/ramesptop" target="_BLANK">
+					<i class="logoT p-1 contactoI fab fa-telegram"></i>
+					<p cllass="clickT" >Click para iniciar conversación en telegram</p>	
+				</a>
+			</div>
+
 		</div>
 	</section>
 	<!--
