--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<div id="navbar" class="row">
 			<nav class="navbar navbar-expand-lg navbar-light">
   				<div class="container-fluid d-flex justify-content-between">
-  					<a class="borde col-1 p-1 bg-white rounded" href="#">
+  					<a class="borde col-1 p-1 bg-white rounded" href="index.html">
   						<img class="logo img-fluid" src="img/logo1.png" alt="">		
       				<!--<p class="ram">Ramesptop <br/> <span class="web">Web</span><span class="des"> Design</span></p>-->
     				</a>
@@ -26,9 +26,10 @@
     					</button>
     				<div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
       					<div class="navbar-nav d-flex justify-content-between">
-        					<a class=" nav-link text-white font-weight-bold active text-center" aria-current="page" href="#"><span class="p-2 h5">Inicio</span> </a>
+        					<a class=" nav-link text-white font-weight-bold active text-center" aria-current="page" href="index.html"><span class="p-2 h5">Inicio</span> </a>
     	    				<a class=" nav-link text-white font-weight-bold text-center" aria-current="page" href="#"><span class="p-2 h5">Contacto</span></a>
     	    				<a class=" nav-link text-white font-weight-bold text-center" aria-current="page" href="#"><span class="p-2 h5">Portfolio</span></a>
+    	    				<a class=" nav-link text-white font-weight-bold text-center" aria-current="page" href="#"><span class="p-2 h5">Tecnologias</span></a>
     	    				<a class=" nav-link text-white font-weight-bold text-center" aria-current="page" href="https://blog.ramesptop.com"><span class="p-2 h5">Blog</span></a>
  		     			</div>
    		 			</div>
@@ -217,7 +218,7 @@
 			</div>
 			<div class="col-12 col-sm-4 contactoT d-flex justify-content-start rounded flex-column mt-5 p-3">
 				<div class="contactoC d-flex justify-content-start">
-					<p class="contacto text-dark p-2">Email: rene@ramesptop.com |<br/> ramesptop@protonmail.com</p><i class="p-2 correo contactoI fas fa-envelope"></i>
+					<p class="contacto text-dark p-2">Email: rene@ramesptop.com |<br/> ramesptop@protonmail.com</p><i class="pt-4 correo contactoI fas fa-envelope"></i>
 				</div>
 				<div class="contactoC d-flex justify-content-start">
 					<p class="contacto text-dark p-2">Telefono: +51(941)339-689</p><i class="p-2 telefono contactoI fas fa-phone-square"></i>
@@ -232,15 +233,15 @@
 			<div class="col-12 col-sm-3 contactoT contactoT2 rounded d-flex justify-content-start flex-wrap flex-column p-2 ">
 				<a class="" href="https://t.me/ramesptop" target="_BLANK">
 					<i class="logoT p-1 contactoI fab fa-telegram"></i>
-					<p cllass="clickT" >Click para iniciar conversación en telegram</p>	
+					<p cllass="clickT" >Iniciar conversación en telegram</p>	
 				</a>
 				<a class="" href="https://t.me/ramesptop" target="_BLANK">
-					<i class="logoT p-1 contactoI fab fa-telegram"></i>
-					<p cllass="clickT" >Click para iniciar conversación en telegram</p>	
+					<i class="logoT logoForm p-1 contactoI fas fa-file-alt"></i>
+					<p cllass="clickT">Solicitar pagina / formulario de servicio</p>
 				</a>
 				<a class="" href="https://t.me/ramesptop" target="_BLANK">
-					<i class="logoT p-1 contactoI fab fa-telegram"></i>
-					<p cllass="clickT" >Click para iniciar conversación en telegram</p>	
+					<i class="logoT logoCorreo p-1 contactoI fas fa-at"></i>
+					<p cllass="clickT" >Enviar email directamente</p>	
 				</a>
 			</div>
 
