--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
     					</button>
     				<div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
       					<div class="navbar-nav d-flex justify-content-between">
-        					<a class=" nav-link text-white font-weight-bold active text-center" aria-current="page" href="index.html"><span class="p-2 h5">Inicio</span> </a>
-    	    				<a class=" nav-link text-white font-weight-bold text-center" aria-current="page" href="#"><span class="p-2 h5">Contacto</span></a>
-    	    				<a class=" nav-link text-white font-weight-bold text-center" aria-current="page" href="#"><span class="p-2 h5">Portfolio</span></a>
-    	    				<a class=" nav-link text-white font-weight-bold text-center" aria-current="page" href="#"><span class="p-2 h5">Tecnologias</span></a>
-    	    				<a class=" nav-link text-white font-weight-bold text-center" aria-current="page" href="https://blog.ramesptop.com"><span class="p-2 h5">Blog</span></a>
+        					<a class=" nav-link text-white font-weight-bold active text-center" aria-current="page" href="index.html"><span class="p-2 h5">Inicio</span> <i class="fas fa-house-user"></i></a>
+    	    				<a class=" nav-link text-white font-weight-bold text-center" aria-current="page" href="#"><span class="p-2 h5">Contacto</span> <i class="fas fa-address-book"></i></a>
+    	    				<a class=" nav-link text-white font-weight-bold text-center" aria-current="page" href="#"><span class="p-2 h5">Portfolio</span> <i class="fas fa-suitcase"></i></a>
+    	    				<a class=" nav-link text-white font-weight-bold text-center" aria-current="page" href="#"><span class="p-2 h5">Tecnologias</span> <i class="fas fa-microchip"></i></a>
+    	    				<a class=" nav-link text-white font-weight-bold text-center" aria-current="page" href="https://blog.ramesptop.com"><span class="p-2 h5">Blog</span> <i class="fas fa-blog"></i></a>
  		     			</div>
    		 			</div>
  		 		</div>
@@ -250,8 +250,13 @@
 	<!--
 		Comienzo del footer
 	-->
-	<footer class="footer">
-		
+	<footer class="footer d-flex justify-content-center align-content-end ">
+		<div class="d-flex justify-content-between flex-column pt-3">
+			<div class="logof m-auto col-4 bg-white p-1 d-flex rounded ">
+				<img class="logo img-fluid" src="img/logo1.png" alt="">		
+			</div>	
+      		<p class="text-light mt-4 h4 mr-3">Diseñado y desarrollado por Ramesptop Web design - 2021</p>		
+		</div>
 	</footer>
 
 </section>
