--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 	<link type="text/css" rel="stylesheet" href="css/estilos.css">
 	<link type="text/css" rel="stylesheet" href="css/bootstrap.min.css">
 		<script src="https://kit.fontawesome.com/31c64c925d.js" crossorigin="anonymous"></script>
+		<link rel="preconnect" href="https://fonts.gstatic.com">
+		<link href="https://fonts.googleapis.com/css2?family=Balsamiq+Sans&family=Sarabun:wght@500&family=Yusei+Magic&display=swap" rel="stylesheet">
 </head>
 <body>
 <section class="body">
@@ -211,14 +213,19 @@
 	<section class="seccion4 p-5">
 		<div class="row mt-4 p-5 d-flex justify-content-between">
 			<div class="col-12 tituloC d-flex justify-content-center">
-				<div class="d-flex justify-content-between">
-					<p class="titulo text-light p-2">Informacion de contacto  </p><i class=" p-2 iconoT fas fa-address-book"></i>
+				<div class="d-flex justify-content-between flex-wrap flex-column">
+					<div class="justify-content-center d-flex">
+						<p class="titulo text-light p-2">Información de contacto  </p><i class=" p-2 iconoT fas fa-address-book"></i>
+					</div>
+					<div class="">
+						<p class="text-light p-2">Sientete libre de escribirnos ante cuaqluier duda o por la razón que sea</p>
+					</div>
 				<hr/>
 				</div>
 			</div>
 			<div class="col-12 col-sm-4 contactoT d-flex justify-content-start rounded flex-column mt-5 p-3">
 				<div class="contactoC d-flex justify-content-start">
-					<p class="contacto text-dark p-2">Email: rene@ramesptop.com |<br/> ramesptop@protonmail.com</p><i class="pt-4 correo contactoI fas fa-envelope"></i>
+					<p class="contacto text-dark p-2">Email: rene@ramesptop.com <br/> ramesptop@protonmail.com</p><i class="pt-4 correo contactoI fas fa-envelope"></i>
 				</div>
 				<div class="contactoC d-flex justify-content-start">
 					<p class="contacto text-dark p-2">Telefono: +51(941)339-689</p><i class="p-2 telefono contactoI fas fa-phone-square"></i>
