pagina de correo agregada

--- a/index.html
+++ b/index.html
@@ -187,12 +187,12 @@
 				    </div>
 				    <div class="carousel-item ">
 				    	<div class="d-flex justify-content-center">
-				      <img src="img/mj.png" class="carrucelI2 d-block w-100" alt="">
+				      <img src="img/pcafe.png" class="carrucelI2 d-block w-100" alt="">
 				      	</div>
 				    </div>
 				    <div class="carousel-item ">
 				    	<div class="d-flex justify-content-center">
-				      <img src="img/LMS.png" class="carrucelI3 d-block w-100" alt="">
+				      <img src="img/psushi.png" class="carrucelI3 d-block w-100" alt="">
 				      	</div>
 				    </div>
 				  </div>
@@ -218,7 +218,7 @@
 						<p class="titulo text-light p-2">Información de contacto  </p><i class=" p-2 iconoT fas fa-address-book"></i>
 					</div>
 					<div class="">
-						<p class="text-light p-2">Sientete libre de escribirnos ante cuaqluier duda o por la razón que sea</p>
+						<p class="text-light p-2">Sientete libre de escribirnos ante cuaquier duda o por la razón que sea</p>
 					</div>
 				<hr/>
 				</div>
@@ -246,7 +246,7 @@
 					<i class="logoT logoForm p-1 contactoI fas fa-file-alt"></i>
 					<p cllass="clickT">Solicitar pagina / formulario de servicio</p>
 				</a>
-				<a class="" href="https://t.me/ramesptop" target="_BLANK">
+				<a class="" href="index.html/pcorreo/index.php" target="_BLANK">
 					<i class="logoT logoCorreo p-1 contactoI fas fa-at"></i>
 					<p cllass="clickT" >Enviar email directamente</p>	
 				</a>
