pcorreo link corregido

--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
 					<i class="logoT logoForm p-1 contactoI fas fa-file-alt"></i>
 					<p cllass="clickT">Solicitar pagina / formulario de servicio</p>
 				</a>
-				<a class="" href="index.html/pcorreo/index.php" target="_BLANK">
+				<a class="" href="pcorreo/index.php" target="_BLANK">
 					<i class="logoT logoCorreo p-1 contactoI fas fa-at"></i>
 					<p cllass="clickT" >Enviar email directamente</p>	
 				</a>
