--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
     				<div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
       					<div class="navbar-nav d-flex justify-content-between">
         					<a class=" nav-link text-white font-weight-bold active text-center" aria-current="page" href="index.html"><span class="p-2 h5">Inicio</span> <i class="fas fa-house-user"></i></a>
-    	    				<a class=" nav-link text-white font-weight-bold text-center" aria-current="page" href="#"><span class="p-2 h5">Contacto</span> <i class="fas fa-address-book"></i></a>
+    	    				<a class=" nav-link text-white font-weight-bold text-center" aria-current="page" href="pcontacto/index.php"><span class="p-2 h5">Contacto</span> <i class="fas fa-address-book"></i></a>
     	    				<a class=" nav-link text-white font-weight-bold text-center" aria-current="page" href="#"><span class="p-2 h5">Portfolio</span> <i class="fas fa-suitcase"></i></a>
     	    				<a class=" nav-link text-white font-weight-bold text-center" aria-current="page" href="#"><span class="p-2 h5">Tecnologias</span> <i class="fas fa-microchip"></i></a>
-    	    				<a class=" nav-link text-white font-weight-bold text-center" aria-current="page" href="https://blog.ramesptop.com"><span class="p-2 h5">Blog</span> <i class="fas fa-blog"></i></a>
+    	    				<a class=" nav-link text-white font-weight-bold text-center" aria-current="page" target="_BLANK" href="https://blog.ramesptop.com"><span class="p-2 h5">Blog</span> <i class="fas fa-blog"></i></a>
  		     			</div>
    		 			</div>
  		 		</div>
@@ -106,7 +106,7 @@
 			</div>
 			<div class="col-12 d-flex justify-content-center pt-5 mb-5">
 				<div class="borde">
-					<a href="#" class="h4 contactanos">Contactanos ya!</a>
+					<a href="pcontacto/index.php" class="h4 contactanos">Contactanos ya!</a>
 				</div>
 			</div>
 
@@ -163,7 +163,7 @@
 			</div>
 			<div class="mt-5 col-12 d-flex justify-content-center pt-5 mb-5">
 				<div class="borde">
-					<a href="#" class="h4 contactanos">Dejanos ayudarte! cuentanos que tienes en mente?</a>
+					<a href="pcontacto/index.php" class="h4 contactanos">Dejanos ayudarte! cuentanos que tienes en mente?</a>
 				</div>
 			</div>
 		</div>
@@ -237,15 +237,15 @@
 					<p class="contacto text-dark p-2">Signal: +51(941)339-689</p><i class="p-2 signal contactoI far fa-comment"></i>
 				</div>				
 			</div>
-			<div class="col-12 col-sm-3 contactoT contactoT2 rounded d-flex justify-content-start flex-wrap flex-column p-2 ">
+			<div class="col-12 col-sm-2 contactoT contactoT2 rounded d-flex justify-content-start flex-wrap flex-column">
 				<a class="" href="https://t.me/ramesptop" target="_BLANK">
 					<i class="logoT p-1 contactoI fab fa-telegram"></i>
 					<p cllass="clickT" >Iniciar conversación en telegram</p>	
 				</a>
-				<a class="" href="https://t.me/ramesptop" target="_BLANK">
+				<!--<a class="" href="https://t.me/ramesptop" target="_BLANK">
 					<i class="logoT logoForm p-1 contactoI fas fa-file-alt"></i>
 					<p cllass="clickT">Solicitar pagina / formulario de servicio</p>
-				</a>
+				</a>-->
 				<a class="" href="pcorreo/index.php" target="_BLANK">
 					<i class="logoT logoCorreo p-1 contactoI fas fa-at"></i>
 					<p cllass="clickT" >Enviar email directamente</p>	
