--- a/ptecnologias/index.html
+++ b/ptecnologias/index.html
@@ -6,6 +6,9 @@
 	<title>Ramesptop web</title>
 	<link rel="stylesheet" href="css/estilos.css">
 	<link rel="stylesheet" href="../bootstrap/bootstrap.min.css">
+		<script src="https://kit.fontawesome.com/31c64c925d.js" crossorigin="anonymous"></script>
+		<link rel="preconnect" href="https://fonts.gstatic.com">
+		<link href="https://fonts.googleapis.com/css2?family=Balsamiq+Sans&family=Sarabun:wght@500&family=Yusei+Magic&display=swap" rel="stylesheet">
 </head>
 <body>
 	<section class="body">
@@ -67,5 +70,11 @@
 		</footer>
 		
 	</section>
+	<script src="js/jquery-3.5.1.min.js"></script>
+	<script src="https://unpkg.com/@popperjs/core@2/dist/umd/popper.js"></script>
+
+	<script src="js/bootstrap.min.js"></script>
+		<script src="js/efectos.js"></script>
+		<script src="js/headroom.min.js"></script>
 </body>
 </html>
