plantillas de pagina de tecnologias y portafolios

--- a/pportafolio/index.html
+++ b/pportafolio/index.html
@@ -43,7 +43,7 @@
 		 Comienzo de la seccion 1
 		 -->
 		<section class="seccion1 p-5">
-			<h2 class="m-5">Tecnologias</h2>
+			<h2 class="m-5">Portafolio</h2>
 		</section>
 		<!--
 		 Comienzo de la seccion 2
