--- a/index.html
+++ b/index.html
@@ -163,8 +163,8 @@
 				<img class="laptop" src="img/mj.png" alt="">
 			</div>
 			<div class="mt-5 col-12 d-flex justify-content-center pt-5 mb-5">
-				<div class="borde">
-					<a href="pcontacto/index.php" class="h4 contactanos">Dejanos ayudarte! cuentanos que tienes en mente?</a>
+				<div class="borde d-flex justify-content-center flex-wrap">
+					<a href="pcontacto/index.php" class=" contactanos">Dejanos ayudarte! ¿cuentanos que tienes en mente?</a>
 				</div>
 			</div>
 		</div>
@@ -211,8 +211,8 @@
 	<!--
 		Comienzo de seccion 4
 	-->
-	<section class="seccion4 p-5">
-		<div class="row mt-4 p-5 d-flex justify-content-between">
+	<section class="seccion4 justify-content-center">
+		<div class="row m-auto p-5 d-flex justify-content-between">
 			<div class="col-12 tituloC d-flex justify-content-center">
 				<div class="d-flex justify-content-between flex-wrap flex-column">
 					<div class="justify-content-center d-flex">
@@ -226,7 +226,7 @@
 			</div>
 			<div class="col-12 col-sm-4 contactoT d-flex justify-content-start rounded flex-column mt-5 p-3">
 				<div class="contactoC d-flex justify-content-start">
-					<p class="contacto text-dark p-2">Email: rene@ramesptop.com <br/> ramesptop@protonmail.com</p><i class="pt-4 correo contactoI fas fa-envelope"></i>
+					<p class="contacto text-dark p-1 p-sm-2">Email: rene@ramesptop.com <br/> ramesptop@protonmail.com</p><i class="pt-4 correo contactoI fas fa-envelope"></i>
 				</div>
 				<div class="contactoC d-flex justify-content-start">
 					<p class="contacto text-dark p-2">Telefono: +51(941)339-689</p><i class="p-2 telefono contactoI fas fa-phone-square"></i>
@@ -238,7 +238,7 @@
 					<p class="contacto text-dark p-2">Signal: +51(941)339-689</p><i class="p-2 signal contactoI far fa-comment"></i>
 				</div>				
 			</div>
-			<div class="col-12 col-sm-2 contactoT contactoT2 rounded d-flex justify-content-start flex-wrap flex-column">
+			<div class="col-12 col-sm-2 contactoT contactoT2 rounded d-flex justify-content-start flex-wrap flex-column ">
 				<a class="" href="https://t.me/ramesptop" target="_BLANK">
 					<i class="logoT p-1 contactoI fab fa-telegram"></i>
 					<p cllass="clickT" >Iniciar conversación en telegram</p>	
