--- a/ptecnologias/index.html
+++ b/ptecnologias/index.html
@@ -71,11 +71,10 @@
 		</footer>
 		
 	</section>
-	<script src="js/jquery-3.5.1.min.js"></script>
+	<script src="../js/jquery-3.5.1.min.js"></script>
 	<script src="https://unpkg.com/@popperjs/core@2/dist/umd/popper.js"></script>
 
-	<script src="js/bootstrap.min.js"></script>
-		<script src="js/efectos.js"></script>
-		<script src="js/headroom.min.js"></script>
+	<script src="../js/bootstrap.min.js"></script>
+		<script src="../js/efectos.js"></script>
 </body>
 </html>
