--- a/pportafolio/index.html
+++ b/pportafolio/index.html
@@ -44,7 +44,20 @@
 		 Comienzo de la seccion 1
 		 -->
 		<section class="seccion1 p-5">
-			<h2 class="m-5">Portafolio</h2>
+			<seccion class="galeria">
+				<div class="uno"></div>
+				<div class="dos"></div>
+				<div class="tres"></div>
+				<div class="cuatro"></div>
+				<div class="cinco"></div>
+				<div class="seis"></div>
+				<div class="siete"></div>
+				<div class="ocho"></div>
+				<div class="nueve"></div>
+				<div class="diez"></div>
+				<div class="once"></div>
+				<div class="doce"></div>
+			</seccion>
 		</section>
 		<!--
 		 Comienzo de la seccion 2
