regilla creada en pportafolio

--- a/pportafolio/index.html
+++ b/pportafolio/index.html
@@ -5,6 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 	<title>Ramesptop web</title>
 	<link rel="stylesheet" href="css/estilos.css">
+	<link rel="stylesheet" href="css/grid.css">
 	<link rel="stylesheet" href="../bootstrap/bootstrap.min.css">
 		<script src="https://kit.fontawesome.com/31c64c925d.js" crossorigin="anonymous"></script>
 		<link rel="preconnect" href="https://fonts.gstatic.com">
@@ -44,19 +45,19 @@
 		 Comienzo de la seccion 1
 		 -->
 		<section class="seccion1 p-5">
-			<seccion class="galeria">
-				<div class="uno"></div>
-				<div class="dos"></div>
-				<div class="tres"></div>
-				<div class="cuatro"></div>
-				<div class="cinco"></div>
-				<div class="seis"></div>
-				<div class="siete"></div>
-				<div class="ocho"></div>
-				<div class="nueve"></div>
-				<div class="diez"></div>
-				<div class="once"></div>
-				<div class="doce"></div>
+			<seccion class="galeria mt-5">
+				<div class="uno rounded"></div>
+				<div class="dos bg-primary"></div>
+				<div class="tres bg-dark"></div>
+				<div class="cuatro bg-white"></div>
+				<div class="cinco bg-success"></div>
+				<div class="seis bg-primary"></div>
+				<div class="siete bg-warning"></div>
+				<div class="ocho bg-danger"></div>
+				<div class="nueve bg-success"></div>
+				<div class="diez bg-info"></div>
+				<div class="once bg-primary"></div>
+				<div class="doce bg-danger"></div>
 			</seccion>
 		</section>
 		<!--
