--- a/pportafolio/index.html
+++ b/pportafolio/index.html
@@ -21,7 +21,7 @@
 		<div id="navbar" class="row">
 			<nav class="navbar navbar-expand-lg navbar-light">
   				<div class="container-fluid d-flex justify-content-between">
-  					<a class="borde col-1 p-1 bg-white rounded" href="index.html">
+  					<a class="borde col-4 col-sm-2 col-md-1 p-1 bg-white rounded" href="index.html">
   						<img class="logo img-fluid" src="img/logo1.png" alt="">		
       				<!--<p class="ram">Ramesptop <br/> <span class="web">Web</span><span class="des"> Design</span></p>-->
     				</a>
@@ -32,8 +32,8 @@
       					<div class="navbar-nav d-flex justify-content-between">
         					<a class=" nav-link text-white font-weight-bold active text-center" aria-current="page" href="../index.html"><span class="p-2 h5">Inicio</span> <i class="fas fa-house-user"></i></a>
     	    				<a class=" nav-link text-white font-weight-bold text-center" aria-current="page" href="../pcontacto/index.php"><span class="p-2 h5">Contacto</span> <i class="fas fa-address-book"></i></a>
-    	    				<a class=" nav-link text-white font-weight-bold text-center" aria-current="page" href="../pportafolio/index.html"><span class="p-2 h5">Portfolio</span> <i class="fas fa-suitcase"></i></a>
-    	    				<a class=" nav-link text-white font-weight-bold text-center" aria-current="page" href="../ptecnologias/index.html"><span class="p-2 h5">Tecnologias</span> <i class="fas fa-microchip"></i></a>
+    	    				<a class=" nav-link text-white font-weight-bold text-center" aria-current="page" href="../pportafolio/index.html"><span class="p-2 h5">Portafolio</span> <i class="fas fa-suitcase"></i></a>
+    	    				<!--<a class=" nav-link text-white font-weight-bold text-center" aria-current="page" href="../ptecnologias/index.html"><span class="p-2 h5">Tecnologias</span> <i class="fas fa-microchip"></i></a>-->
     	    				<a class=" nav-link text-white font-weight-bold text-center" aria-current="page" target="_BLANK" href="https://blog.ramesptop.com"><span class="p-2 h5">Blog</span> <i class="fas fa-blog"></i></a>
  		     			</div>
    		 			</div>
@@ -45,41 +45,46 @@
 		 Comienzo de la seccion 1
 		 -->
 		<section class="seccion1 p-5">
-			<seccion class="galeria mt-5">
-				<div class="uno rounded"></div>
-				<div class="dos bg-primary"></div>
-				<div class="tres bg-dark"></div>
-				<div class="cuatro bg-white"></div>
-				<div class="cinco bg-success"></div>
-				<div class="seis bg-primary"></div>
-				<div class="siete bg-warning"></div>
-				<div class="ocho bg-danger"></div>
-				<div class="nueve bg-success"></div>
-				<div class="diez bg-info"></div>
-				<div class="once bg-primary"></div>
-				<div class="doce bg-danger"></div>
+			<section class="tituloP row mt-4">
+				<section class="col-12 mt-3 d-flex justify-content-center">
+					<p class="titulo h2 text-center p-2 col-12 col-sm-3 col-md-2 rounded font-weight-bold">Portafolio  <i class="fas fa-suitcase"></i></p>
+				</section>
+			</section>
+			<seccion class="galeria mt-4">
+				<a href="https://ramesptop.com/pcafe" target="_BLANK" class="uno rounded"></a>
+				<a href="https://blog.ramesptop.com/tienda/"  target="_BLANK" class="dos rounded"></a>
+				<a href="https://www.ramesptop.com/podontologia/index.html" target="_BLANK" class="tres rounded"></a>
+				<a href="https://blog.ramesptop.com" target="_BLANK" class="cuatro rounded"></a>
+				<a href="https://ramesptop.com/pcevicheria/" target="_BLANK" target="_BLANK" class="cinco rounded"></a>
+				<a href="https://www.ramesptop.com/psushi/index.html" target="_BLANK" class="seis rounded"></a>
+				<a href="../ptecnologias/index.html" target="_BLANK" class="siete rounded"></a>
+				<a href="https://blog.ramesptop.com" target="_BLANK" class="ocho rounded"></a>
+				<a href="../ptecnologias/index.html" target="_BLANK" class="nueve rounded"></a>
+				<a href="../ptecnologias/index.html" target="_BLANK" class="diez rounded"></a>
+				<a href="../ptecnologias/index.html" target="_BLANK" class="once rounded"></a>
+				<a href="../ptecnologias/index.html" target="_BLANK" class="doce rounded"></a>
 			</seccion>
 		</section>
 		<!--
 		 Comienzo de la seccion 2
 		 -->
-		<section class="seccion2">
+		<!--<section class="seccion2">
 			
-		</section>
+		</section>-->
 		<!--
 		 Comienzo de la seccion 3
 		 -->
-		<section class="seccion3">
+		<!--<section class="seccion3">
 			
-		</section>
+		</section>-->
 		<!--
 		 Comienzo del footer
 		 -->
 		<footer class="footer d-flex justify-content-center align-content-end ">
 			<div class="d-flex justify-content-between flex-column pt-3">
-				<div class="logof m-auto col-4 bg-white p-1 d-flex rounded ">
+				<!--<div class="col-2 col-sm-1 col-md-1 logof m-auto col-4 bg-white p-1 d-flex rounded ">
 					<img class="logo img-fluid" src="img/logo1.png" alt="">		
-				</div>	
+				</div>	-->
       			<p class="text-light mt-4 h4 mr-3">Diseñado y desarrollado por Ramesptop Web design - 2021</p>	
 			</div>
 		</footer>
