--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
 				</div>
 			</div>
 			<div class="mj col-12 col-sm-6">
-				<img class="laptop" src="img/LMS.png" alt="">
+				<img loading="lazy" class="laptop" src="img/LMS.png" alt="">
 			</div>
 			<div class="mt-5 col-12 d-flex justify-content-center pt-5 mb-5">
 				<div class="borde d-flex justify-content-center flex-wrap">
@@ -188,12 +188,12 @@
 				    </div>-->
 				    <a href="https://www.ramesptop.com/pcafe/" target="_BLANK" class="carousel-item active">
 				    	<div class="d-flex justify-content-center">
-				      <img src="img/pcafe.png" class="carrucelI2 d-block w-100" alt="">
+				      <img loading="lazy" src="img/pcafe.png" class="carrucelI2 d-block w-100" alt="">
 				      	</div>
 				    </a>
 				    <a href="https://www.ramesptop.com/psushi/" target="_BLANK" class="carousel-item ">
 				    	<div class="d-flex justify-content-center">
-				      <img src="img/psushi.png" class="carrucelI3 d-block w-100" alt="">
+				      <img loading="lazy" src="img/psushi.png" class="carrucelI3 d-block w-100" alt="">
 				      	</div>
 				    </a>
 				  </div>
@@ -265,7 +265,7 @@
 	<footer class="footer d-flex justify-content-center align-content-end ">
 		<div class="d-flex justify-content-between flex-column pt-3">
 			<div class="logof m-auto col-6 col-sm-3 bg-white p-1 d-flex rounded ">
-				<img class="logo img-fluid" src="img/logo1.png" alt="">		
+				<img loading="lazy" class="logo img-fluid" src="img/logo1.png" alt="">		
 			</div>	
       		<p class="text-light mt-4 h5 mr-3">Diseñado y desarrollado por Ramesptop Web design - 2021</p>		
 		</div>
