agregando link al carrucel

--- a/index.html
+++ b/index.html
@@ -181,12 +181,13 @@
 		<div class="col-12">
 			<div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
 				  <div class="carousel-inner">
-				    <!--<div class="carousel-item active ">
+				    <a href="https://young-waters-96309.herokuapp.com" class="carousel-item active "
+				    target="_BLANK">
 				    	<div class="d-flex justify-content-center">
-				      <img src="img/LMS.png" class="carrucelI3 d-block w-100" alt="">
+				      <img loading="lazy" src="img/laptopcliente.png" class="carrucelI3 d-block w-100" alt="">
 				      	</div>
-				    </div>-->
-				    <a href="https://www.ramesptop.com/pcafe/" target="_BLANK" class="carousel-item active">
+				    </a>
+				    <a href="https://www.ramesptop.com/pcafe/" target="_BLANK" class="carousel-item">
 				    	<div class="d-flex justify-content-center">
 				      <img loading="lazy" src="img/pcafe.png" class="carrucelI2 d-block w-100" alt="">
 				      	</div>
