agregadas img de portafolio everest

--- a/index.html
+++ b/index.html
@@ -197,6 +197,11 @@
 				      <img loading="lazy" src="img/psushi.png" class="carrucelI3 d-block w-100" alt="">
 				      	</div>
 				    </a>
+				    <a href="https://www.ramesptop.com/peverest/" target="_BLANK" class="carousel-item ">
+				    	<div class="d-flex justify-content-center">
+				      <img loading="lazy" src="img/laptopeverest.png" class="carrucelI3 d-block w-100" alt="">
+				      	</div>
+				    </a>
 				  </div>
 				  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-bs-slide="prev">
 				    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
