--- a/index.html
+++ b/index.html
@@ -181,12 +181,12 @@
 		<div class="col-12">
 			<div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
 				  <div class="carousel-inner">
-				    <a href="https://young-waters-96309.herokuapp.com" class="carousel-item active "
+				    <!--<a href="https://young-waters-96309.herokuapp.com" class="carousel-item"
 				    target="_BLANK">
 				    	<div class="d-flex justify-content-center">
 				      <img loading="lazy" src="img/laptopcliente.png" class="carrucelI3 d-block w-100" alt="">
 				      	</div>
-				    </a>
+				    </a>-->
 				    <a href="https://www.ramesptop.com/pcafe/" target="_BLANK" class="carousel-item">
 				    	<div class="d-flex justify-content-center">
 				      <img loading="lazy" src="img/pcafe.png" class="carrucelI2 d-block w-100" alt="">
@@ -200,6 +200,11 @@
 				    <a href="https://www.ramesptop.com/peverest/" target="_BLANK" class="carousel-item ">
 				    	<div class="d-flex justify-content-center">
 				      <img loading="lazy" src="img/laptopeverest.png" class="carrucelI3 d-block w-100" alt="">
+				      	</div>
+				    </a>
+				    <a href="https://rocky-peak-56338.herokuapp.com/" target="_BLANK" class="carousel-item active">
+				    	<div class="d-flex justify-content-center">
+				      <img loading="lazy" src="img/laptoplibros.png" class="carrucelI3 d-block w-100" alt="">
 				      	</div>
 				    </a>
 				  </div>
